# world-chain

./: .gitignore  .gitmodules  .gitmodules.bak  CODEOWNERS  Justfile  LICENSE  README.md  SECURITY.md
.github/workflows/: devnet-ci.yml  foundry.yml  run-k8s.yml  rust-ci.yml
contracts/: README.md  foundry.toml  remappings.txt
contracts/scripts/: DeployDevnet.s.sol  deploy_anvil.sh
contracts/src/: PBH4337Module.sol  PBHEntryPoint.sol  PBHEntryPointImplV1.sol  PBHSignatureAggregator.sol  PBHVerifier.sol  PBHVerifierImplV1.sol
contracts/src/helpers/: ByteHasher.sol  PBHExternalNullifier.sol
contracts/src/interfaces/: IMulticall3.sol  IPBHEntryPoint.sol  IPBHVerifier.sol  IWorldID.sol
contracts/test/: Mock4337Module.sol  MockWorldIDGroups.sol  PBH4337Module.t.sol  PBHEntryPointConstruction.t.sol  PBHEntryPointImplV1.t.sol  PBHEntryPointImplV1Init.t.sol  PBHEntryPointImplV1Proxy.t.sol  PBHEntryPointOwnershipManagement.t.sol  PBHEntryPointUninit.t.sol  PBHExternalNullifier.t.sol  PBHSignatureAggregator.t.sol  PBHVerifier.t.sol  PBHVerifierConstruction.t.sol  PBHVerifierOwnershipManagement.t.sol  PBHVerifierTest.sol  PBHVerifierTest.t.sol  PBHVerifierVerify.sol  Setup.sol  TestSetup.sol  TestUtils.sol
contracts/test/mocks/: Mock4337Module.sol  MockAccount.sol  MockWorldIDGroups.sol
devnet/: Dockerfile.rollup-boost  Justfile  README.md  clean.sh  fixtures.sh  kurtosis.yml  network_params.yaml
devnet/fixtures/: fixture.json
devnet/src/: el_cl_launcher.star  l2.star  participant_network.star
devnet/src/cl/op-node-builder/: op_node_builder_launcher.star
devnet/src/contracts/: contract_deployer.star
devnet/src/el/op-geth-builder/: op_geth_builder_launcher.star
devnet/src/el/world-chain/: world_chain_launcher.star
devnet/src/engine/rollup-boost/: rollup_boost_launcher.star
devnet/src/package_io/: input_parser.star
pbh-verifier/: foundry.toml  remappings.txt
pbh-verifier/src/: Counter.sol  PBHSignatureAggregator.sol  PBHVerifier.sol  PBHVerifierImplV1.sol
pbh-verifier/src/helpers/: ByteHasher.sol  PBHExternalNullifier.sol  PBHExternalNullifierLib.sol
pbh-verifier/test/: PBHExternalNullifier.sol  PBHExternalNullifier.t.sol  PBHVerifier.t.sol  PBHVerifier.t.sol.bak
world-chain-builder/: .dockerignore  Cargo.toml  Dockerfile  Justfile  README.md  x
world-chain-builder/.config/: nextest.toml
world-chain-builder/benches/: validate_transaction.rs
world-chain-builder/crates/assertor/: Cargo.toml
world-chain-builder/crates/assertor/src/: main.rs
world-chain-builder/crates/tests/: Cargo.toml
world-chain-builder/crates/tests/src/: cases.rs  fixtures.rs  main.rs
world-chain-builder/crates/toolkit/: Cargo.toml  README.md
world-chain-builder/crates/toolkit/src/: cli.rs  main.rs
world-chain-builder/crates/toolkit/src/cli/: identity_source.rs  inclusion_proof_source.rs  utils.rs
world-chain-builder/crates/world/db/: Cargo.toml
world-chain-builder/crates/world/db/src/: lib.rs
world-chain-builder/crates/world/node/: Cargo.toml
world-chain-builder/crates/world/node/benches/: validate_transaction.rs
world-chain-builder/crates/world/node/src/: args.rs  lib.rs  node.rs  test_utils.rs
world-chain-builder/crates/world/node/src/test/: mod.rs
world-chain-builder/crates/world/node/test/: e2e.rs
world-chain-builder/crates/world/node/tests/: e2e.rs  mod.rs
world-chain-builder/crates/world/node/tests/assets/: genesis.json
world-chain-builder/crates/world/payload/: Cargo.toml
world-chain-builder/crates/world/payload/src/: builder.rs
world-chain-builder/crates/world/pbh/: Cargo.toml
world-chain-builder/crates/world/pbh/src/: external_nullifier.rs  lib.rs  payload.rs
world-chain-builder/crates/world/pool/: Cargo.toml
world-chain-builder/crates/world/pool/src/: bindings.rs  builder.rs  eip4337.rs  error.rs  lib.rs  noop.rs  ordering.rs  payload.rs  root.rs  test_utils.rs  tx.rs  validator.rs
world-chain-builder/crates/world/primitives/: Cargo.toml
world-chain-builder/crates/world/primitives/src/: transaction.rs
world-chain-builder/crates/world/rpc/: Cargo.toml
world-chain-builder/crates/world/rpc/src/: bundle.rs  core.rs  eth.rs  lib.rs  sequencer.rs  transactions.rs
world-chain-builder/docs/: Envelope.md  Network.md  README.md  pbh_architecture.md  pbh_tx_lifecycle.md
world-chain-builder/src/: args.rs  builder.rs  date_marker.rs  envelope.rs  external_nullifier.rs  lib.rs  network.rs  node.rs  nullifier.rs  pool.rs  primitives.rs  txpool.rs
world-chain-builder/src/e2e_tests/: mod.rs
world-chain-builder/src/executer/: block.rs  builder.rs
world-chain-builder/src/executor/: block.rs  builder.rs  mod.rs
world-chain-builder/src/network/: builder.rs  mod.rs
world-chain-builder/src/node/: args.rs  builder.rs  mod.rs  test_utils.rs
world-chain-builder/src/node/builder/: mod.rs
world-chain-builder/src/payload/: builder.rs
world-chain-builder/src/pbh/: date_marker.rs  db.rs  external_nullifier.rs  mod.rs  payload.rs  semaphore.rs  tx.rs
world-chain-builder/src/pool/: builder.rs  error.rs  mod.rs  noop.rs  ordering.rs  provider.rs  root.rs  tx.rs  validator.rs
world-chain-builder/src/rpc/: block.rs  bundle.rs  call.rs  mod.rs  pending_block.rs  receipt.rs  transaction.rs
world-chain-builder/src/test/: mod.rs
world-chain-builder/src/test/e2e/: mod.rs
