[package]
name = "world-chain-builder"
version = "0.1.0"
edition = "2021"

default-run = "world-chain-builder"

[workspace]
members = ["crates/*"]

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda", features = [
    "test-utils",
] }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }

# reth-optimism
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda", features = [
    "optimism",
] }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda", features = [
    "optimism",
] }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda", features = [
    "optimism",
] }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda", features = [
    "optimism",
] }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda", features = [
    "optimism",
] }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda", features = [
    "optimism",
] }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }

# alloy
op-alloy-consensus = "0.5"
op-alloy-rpc-types = "0.5"
op-alloy-network = "0.5"
alloy-consensus = { version = "0.5.4", default-features = false }
alloy-network = { version = "0.5.4", default-features = false }
alloy-primitives = { version = "0.8.9", default-features = false }
alloy-rpc-types-eth = { version = "0.5.4", default-features = false }
alloy-rpc-types = { version = "0.5.4", features = [
    "eth",
], default-features = false }
alloy-rlp = "0.3.4"
alloy-eips = { version = "0.5.4", default-features = false }
alloy-genesis = { version = "0.5.4", default-features = false }

# revm
# revm
revm = { version = "17.0.0", features = ["std"], default-features = false }
revm-inspectors = "0.10.0"
revm-primitives = { version = "13.0.0", features = [
    "std",
], default-features = false }
revm-interpreter = "10"
revm-precompile = "11"


# 3rd party
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
thiserror = "1"
strum = "0.26"
strum_macros = "0.26"
bytemuck = "1"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "d0d1f899add7116ccc1228f5e5e5ee2e2e233768", features = [
    "depth_30",
] }
clap = { version = "4", features = ["derive", "env"] }
eyre = { version = "0.6", package = "color-eyre" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
parking_lot = "0.12"
derive_more = "1"
dotenvy = "0.15.7"
tikv-jemallocator = { version = "0.6.0", optional = true }
bytes = "1.7.2"
hex = "0.4.3"
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3"
test-case = "3"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
alloy-primitives = "0.8"
serde_json = "1"
rand = "0.8"
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "ddc9bda" }
alloy-signer = { version = "0.5.4", default-features = false }
alloy-signer-local = { version = "0.5.4", default-features = false }

[features]
jemalloc = ["tikv-jemallocator"]

[[bin]]
name = "world-chain-builder"
path = "bin/world-chain-builder.rs"

[[bench]]
name = "validate_transaction"
harness = false
