[package]
name = "world-chain-builder"
version = "0.1.0"
edition = "2021"

default-run = "world-chain-builder"

[workspace]
members = ["crates/*"]

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4", features = [
    "test-utils",
] }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }

# reth-optimism
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4", features = [
    "optimism",
] }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4", features = [
    "optimism",
] }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4", features = [
    "optimism",
] }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4", features = [
    "optimism",
] }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4", features = [
    "optimism",
] }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4", features = [
    "optimism",
] }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }

# alloy
op-alloy-consensus = "0.7.3"
op-alloy-rpc-types = "0.7.3"
op-alloy-network = "0.7.3"
alloy-consensus = { version = "0.7.3", default-features = false }
alloy-network = { version = "0.7.3", default-features = false }
alloy-primitives = { version = "0.8.11", default-features = false }
alloy-rpc-types-eth = { version = "0.7.3", default-features = false }
alloy-rpc-types = { version = "0.7.3", features = [
    "eth",
], default-features = false }
alloy-rlp = "0.3.10"
alloy-eips = { version = "0.7.3", default-features = false }
alloy-genesis = { version = "0.7.3", default-features = false }

# revm
revm = { version = "18.0.0", features = ["std"], default-features = false }
revm-inspectors = "0.12.0"
revm-primitives = { version = "14.0.0", features = [
    "std",
], default-features = false }
revm-interpreter = "10"
revm-precompile = "11"


# 3rd party
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
thiserror = "1"
strum = "0.26"
strum_macros = "0.26"
bytemuck = "1"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "d0d1f899add7116ccc1228f5e5e5ee2e2e233768", features = [
    "depth_30",
] }
clap = { version = "4", features = ["derive", "env"] }
eyre = { version = "0.6", package = "color-eyre" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
parking_lot = "0.12"
derive_more = "1"
dotenvy = "0.15.7"
tikv-jemallocator = { version = "0.6.0", optional = true }
bytes = "1.7.2"
hex = "0.4.3"
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3"
test-case = "3"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
alloy-primitives = "0.8"
serde_json = "1"
rand = "0.8"
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.4" }
alloy-signer = { version = "0.7.3", default-features = false }
alloy-signer-local = { version = "0.7.3", default-features = false }

[features]
jemalloc = ["tikv-jemallocator"]

[[bin]]
name = "world-chain-builder"
path = "bin/world-chain-builder.rs"

[[bench]]
name = "validate_transaction"
harness = false
