[package]
name = "world-chain-builder-pbh"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["rlp"] }

chrono = { workspace = true }
thiserror = { workspace = true }
semaphore.workspace = true
strum.workspace = true
serde.workspace = true
bon.workspace = true

[dev-dependencies]
ethers-core.workspace = true
test-case.workspace = true
