[package]
name = "world-chain-builder-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
world-chain-builder-pool.workspace = true

reth.workspace = true

reth-provider.workspace = true
revm-primitives.workspace = true
reth-optimism-rpc.workspace = true
alloy-consensus.workspace = true

alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true

jsonrpsee.workspace = true
jsonrpsee-types.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true

